package BusinessLogic;

import Model.Server;
import Model.Task;

import java.util.List;

public interface Strategy {
    public Server addTask(List<Server> servers, Task t);
}

